--- a/31-ORM_com_NodeJS_API_com_Sequelize_e_MySQL/projeto/package.json
+++ b/31-ORM_com_NodeJS_API_com_Sequelize_e_MySQL/projeto/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./api/index.js",
   "scripts": {
-    "start" : "nodemon ./api/index.js",
+    "start": "nodemon ./api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -12,7 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.3.1",
+    "path": "^0.12.7",
+    "sequelize": "^5.21.7",
+    "sequelize-cli": "^5.5.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
